Correct author bio image alignment. Fixes #24

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -314,11 +314,6 @@ body {
 	a, a:hover {
 		border-bottom: 0 solid transparent;
 	}
-	img.bio-photo {
-		width: 100px;
-		height: 100px;
-		.rounded(100px);
-	}
 }
 .author-social {
   display: block;
@@ -337,18 +332,20 @@ body {
 }
 .article-author-side {
 	display: none;
+	.bio-photo {
+		max-width: 110px;
+		.rounded(150px);
+	}
 	@media @600px {
 		display: block;
 		.grid(12,2);
 		.prefix(12,0.5);
 		.suffix(12,0.5);
 		h3,
-		.bio-photo,
 		p,
 		.author-social {
 			display: block;
 			max-width: 125px;
-			margin: auto;
 		}
 		h3 {
 			margin-top: 10px;
@@ -367,10 +364,6 @@ body {
 		p,
 		.author-social {
 			max-width: 150px;
-		}
-		img.bio-photo {
-			margin-left: 25px;
-			margin-right: 25px;
 		}
 	}
 	@media @1382px {
@@ -397,10 +390,6 @@ body {
 		p,
 		.author-social {
 			max-width: 150px;
-		}
-		img.bio-photo {
-			margin-left: 25px;
-			margin-right: 25px;
 		}
 	}
 }
